--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,82 @@
-/* ================================ */
-/* 1. Selectors & Basic Properties - Hero Section */
-/* ================================ */
+/* Universal Selector */
+* {
+  padding: 0;
+  margin: 0;
+}
 
-/* ================================ */
-/* 2. Fonts - Features Section */
-/* ================================ */
+/* Element Selector */
+body {
+  background-color: #f7f7f7;
+  color: #333;
+  font-family: "Poppins", Times, serif;
+}
 
-/* ================================ */
-/* 3. Colors - Call to Action Section */
-/* ================================ */
+/* hero section styles */
+.hero {
+  padding: 100px;
+}
 
-/* ================================ */
-/* 5. Flex - Programs Section */
-/* ================================ */
+.hero__title {
+  color: black;
+}
 
-/* ================================ */
-/* 6. HTML Elements & Images - Form Section */
-/* ================================ */
+.hero__description {
+  color: #81da76;
+}
 
-/* ================================ */
-/* 8. Images and Final Styling */
-/* ================================ */
+.hero__highlight {
+  color: #dbfbe0;
+}
 
-/* ================================ */
-/* 9. Navbar and Footer Section */
-/* ================================ */
+/* feature section styles*/
+
+.feature {
+  padding: 100px;
+}
+
+.feature__item {
+  padding: 30px 0;
+}
+
+.feature__title {
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #23c93c;
+  margin-bottom: 10px;
+}
+
+.feature__title--selected {
+  text-decoration: underline;
+}
+
+.feature__description {
+  text-align: right;
+  line-height: 1.2rem;
+  word-spacing: 3rem;
+  white-space: pre-wrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
