--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 /* Element Selector */
@@ -79,14 +80,45 @@ button {
 
 /*Video Section*/
 
+.video {
+  text-align: center;
+  padding: 100px;
+  font-weight: 500;
+}
 
+.video__title {
+  font-size: 32px;
+  font-weight: 500;
+}
 
+.video__description {
+  margin-top: 10px;
+  font-weight: 300;
+  color: #6e6e6e;
+}
 
+.video__controls {
+  margin-top: 20px;
+}
 
+.video__button {
+  border: 1px;
+  border-style: solid;
+  border-color: #5bb471;
+  padding: 10px 20px;
+}
 
+.video__button--primary {
+  margin-right: 40px;
+}
 
-
-
+.video__container {
+  margin-top: 20px;
+  background-color: #ccc;
+  width: 100%;
+  height: 500px;
+  box-shadow: 1px 4px 7px 4px rgba(0, 0, 0, 0.33); 
+}
 
 
 
